--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   #firebase
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.11
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
