--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,23 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite:
   intl: ^0.17.0
   conditional_builder_null_safety: ^0.0.6
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
-  dio: ^4.0.4
   hexcolor: ^2.0.6
   shared_preferences: ^2.0.12
-  webview_flutter: ^3.0.0
-  smooth_page_indicator: ^1.0.0+2
   hydrated_bloc: ^8.0.0
   fluttertoast: ^8.0.8
-  carousel_slider: ^4.0.0
-  http: any
   cached_network_image: ^3.2.0
-  flutter_spinkit: ^5.1.0
-  readmore: ^2.1.0
+  image_picker: ^0.8.4+11
+
 
   #firebase
   firebase_core: ^1.13.1
